Added real function and features for real world. SQLite added
