# people.py
@@ -1,105 +1,56 @@
-from datetime import datetime
+from flask import (
+    make_response,
+    abort
+)
+from config import db
+from models import (
+    Person,
+    PersonSchema
+)
 
-from flask import make_response, abort
-
-def get_timestamp():
-    return datetime.now().strftime(("%Y-%m-%d %H:%M:%S"))
-
-PEOPLE = {
-    "Farrell": {
-        "fname": "Doug",
-        "lname": "Farrell",
-        "timestamp": get_timestamp()
-    },
-    "Brockman": {
-        "fname": "Kent",
-        "lname": "Brockman",
-        "timestamp": get_timestamp()
-    },
-    "Easter": {
-        "fname": "Bunny",
-        "lname": "Easter",
-        "timestamp": get_timestamp()
-    }
-}
 
 def get_all():
-    """
-    This function gets all the records of people.
-    Endpoint: /api/people
+    people = Person.query.order_by(Person.lname).all()
+    person_jsons = PersonSchema(many=True)
 
-    :return:    json string list of people
-    """
-    
-    return [PEOPLE[key] for key in sorted(PEOPLE.keys())]
+    return person_jsons.dump(people).data
 
+def get_one(person_id):
+    person = Person.query.filter(Person.person_id == person_id).one_or_none()
 
-def read_one(lname):
-    """
-        This function retrieve one record based on the last name field.
-        Endpoint: /api/people/{lname}
-
-        :param name:    last name of person
-        :return:        person matching last game
-    """
-
-    if lname in PEOPLE:
-        person = PEOPLE.get(lname)
+    if person is not None:
+        person_json = PersonSchema
+        return person_json.dump(person).data
     else:
         abort(
-            404, "Person with last name {lname} not found".format(lname=lname)
+            404, 'Person not found for Id: {person_id}'.format(person_id=person_id)
         )
-
-    return person
-
 
 def create(person):
-    """
-    """
-    
-    lname = person.get("lname", None)
-    fname = person.get("fname", None)
+    fname = person.get('fname')
+    lname = person.get('lname')
 
-    if lname not in PEOPLE and lname is not None:
-        PEOPLE[lname] = {
-            "lname": lname,
-            "fname": fname,
-            "timestamp": get_timestamp()
-        }
-        return make_response(
-            "{lname} successfully created".format(lname=lname), 201
-        )
+    existing_person = Person.query \
+        .filter(Person.fname == fname) \
+        .filter(Person.lname == lname) \
+        .one_or_none()
+
+    if existing_person is None:
+        person_schema = PersonSchema()
+        new_person = schema.load(person, session=db.session).data
+
+        db.session.add(new_person)
+        db.session.commit()
+
+        return schema.dump(new_person).data, 201
+
     else:
         abort(
-            406, "Person with name {lname} already exists.".format(lname=lname)
+            409, f'Person {fname} {lname} exists already.'
         )
 
+def delete(person_id):
+    pass
 
-def update(lname, person):
-    """
-    """
-
-    if lname in PEOPLE:
-        PEOPLE[lname]["fname"] = person.get("fname")
-        PEOPLE[lname]["timestamp"] = get_timestamp()
-
-        return PEOPLE[lname]
-    else:
-        abort(
-            404, "Person with last name {lname} not found".format(lname=lname)
-        )
-
-
-def delete(lname):
-    """
-    """
-
-    if lname in PEOPLE:
-        del PEOPLE[lname]
-        return make_response(
-            "{lname} deleted successfully.".format(lname=lname), 200
-        )
-    else:
-        abort(
-            404, "Person with lastname {lname} not found.".format(lname=lname)
-        )
+def update(person_id):
+    pass
