# swagger.yml
@@ -1,94 +1,124 @@
-swagger: '2.0'
+swagger: "2.0"
 info:
-  description: This is the swagger file for this API
-  version: 1.0.0
-  title: Swagger REST API
+  description: This is the swagger file that goes with our server code
+  version: "1.0.0"
+  title: Swagger REST
 consumes:
-  - "application/json"
+  - application/json
 produces:
-  - "application/json"
-basePath: "/api"
+  - application/json
 
-paths: 
+basePath: /api
+
+paths:
   /people:
     get:
       operationId: people.get_all
-      tags: 
-        - "People"
-      summary: "The people who belongs to this API"
-      description: "Read the full list of people"
+      tags:
+        - People
+      summary: Read the entire set of people, sorted by last name
+      description: Read the entire set of people, sorted by last name
       responses:
         200:
-          description: "Successfull read people list operation"
+          description: Successfully read people set operation
           schema:
-            type: "array"
+            type: array
             items:
               properties:
+                person_id:
+                  type: string
+                  description: Id of the person
                 fname:
-                  type: "string"
-                lname: 
-                  type: "string"
+                  type: string
+                  description: First name of the person
+                lname:
+                  type: string
+                  description: Last name of the person
                 timestamp:
-                  type: "string"
+                  type: string
+                  description: Creation/Update timestamp of the person
+
     post:
       operationId: people.create
-      tags: 
-        - "People"
-      summary: Create a person and add it to the people list.
-      description: Create a new person in the api list
+      tags:
+        - People
+      summary: Create a person
+      description: Create a new person
       parameters:
         - name: person
           in: body
-          description: people to create
-          required: true
+          description: Person to create
+          required: True
           schema:
             type: object
             properties:
               fname:
                 type: string
-                description: First name of the person to create
+                description: First name of person to create
               lname:
                 type: string
-                description: Last name of the person to create
+                description: Last name of person to create
       responses:
         201:
-          description: Successfully created person in list
-  
-  /people/{lname}:
+          description: Successfully created person
+          schema:
+            properties:
+              person_id:
+                type: string
+                description: Id of the person
+              fname:
+                type: string
+                description: First name of the person
+              lname:
+                type: string
+                description: Last name of the person
+              timestamp:
+                type: string
+                description: Creation/Update timestamp of the person record
+
+  /people/{person_id}:
     get:
-      operationId: people.read_one
+      operationId: people.get_one
       tags:
-        - "People"
-      summary: Read one person from the list
-      description: Read one person from the people list
+        - People
+      summary: Read one person
+      description: Read one person
       parameters:
-        - name: lname
+        - name: person_id
           in: path
-          description: Last name of the person to get from the list
-          type: string
+          description: Id of the person to get
+          type: integer
           required: True
       responses:
         200:
-          description: Successfully read person from people list operation
+          description: Successfully read person from people data operation
           schema:
+            type: object
             properties:
+              person_id:
+                type: string
+                description: Id of the person
               fname:
                 type: string
+                description: First name of the person
               lname:
                 type: string
+                description: Last name of the person
               timestamp:
                 type: string
+                description: Creation/Update timestamp of the person record
+
     put:
       operationId: people.update
       tags:
-        - "People"
-      summary: Update a person from the list
-      description: Update a person in the people list
+        - People
+      summary: Update a person
+      description: Update a person
       parameters:
-        - name: lname
+        - name: person_id
           in: path
-          description: Last name of the person to update in the list
-          type: string
+          description: Id the person to update
+          type: integer
           required: True
         - name: person
           in: body
@@ -97,11 +127,27 @@ paths:
             properties:
               fname:
                 type: string
+                description: First name of the person
               lname:
                 type: string
+                description: Last name of the person
       responses:
         200:
-          description: Successfully updated person in people list    
+          description: Successfully updated person
+          schema:
+            properties:
+              person_id:
+                type: string
+                description: Id of the person in the database
+              fname:
+                type: string
+                description: First name of the person
+              lname:
+                type: string
+                description: Last name of the person
+              timestamp:
+                type: string
+                description: Creation/Update timestamp of the person record
 
     delete:
       operationId: people.delete
@@ -110,10 +156,12 @@ paths:
       summary: Delete a person from the people list
       description: Delete a person
       parameters:
-        - name: lname
+        - name: person_id
           in: path
-          type: string
-          required: True
+          type: integer
+          description: Id of the person to delete
+          required: true
       responses:
         200:
-          description: Successfully deleted a person from the people list
+          description: Successfully deleted a person
+
